# raytracer

./: CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp
app/src/02_canvas/: main.cpp
app/src/03_matrix/: main.cpp
app/src/04_transformations/: main.cpp
app/src/05_ray_sphere_intersections/: main.cpp
app/src/06_light_and_shading/: main.cpp
app/src/07_scene/: main.cpp
app/src/09_planes/: main.cpp
app/src/10_patterns/: main.cpp
app/src/11a_reflection_reflaction/: main.cpp
app/src/11b_fresnel_effect/: main.cpp
cmake/: include_catch2.cmake
core/: CMakeLists.txt
core/include/: camera.h  canvas.h  color.h  computation.h  intersection.h  lightning.h  material.h  math.h  matrix.h  matrix_impl.h  pattern.h  perlin_noise.h  plane.h  ray.h  shape.h  sphere.h  transformations.h  tuple.h  types.h  world.h
core/src/: camera.cpp  canvas.cpp  color.cpp  intersection.cpp  lightning.cpp  material.cpp  pattern.cpp  plane.cpp  ray.cpp  sphere.cpp  tuple.cpp  world.cpp
scripts/: install_dependencies.py
tests/: CMakeLists.txt
tests/src/: camera_test.cpp  canvas_test.cpp  color_test.cpp  intersection_test.cpp  lightning_test.cpp  main.cpp  material_test.cpp  matrix_test.cpp  pattern_test.cpp  plane_test.cpp  ray_test.cpp  shape_test.cpp  sphere_test.cpp  transformations_test.cpp  tuple_test.cpp  world_test.cpp
